--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,18 @@
   "description": "A flexible wrapper PHP class for the cURL extension.",
   "keywords": ["curl", "wrapper"],
   "homepage": "https://github.com/crazy-max/CwsCurl",
-  "license": "LGPL",
+  "license": "MIT",
   "authors": [
-     {
-        "name": "crazy-max",
-        "homepage": "http://www.crazyws.fr/"
-     }
+    {
+      "name": "CrazyMax",
+      "homepage": "https://github.com/crazy-max"
+    }
   ],
   "minimum-stability": "dev",
   "require": {
     "php": ">=5.3.0",
-    "crazy-max/cws-debug": ">=1.10"
+    "ext-curl": "*",
+    "crazy-max/cws-debug": "~1.11"
   },
   "autoload": {
     "psr-0": {
